# starpin_cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
src/commands/: build.rs  clean.rs  deploy.rs  idl.rs  init.rs  keys.rs  mod.rs  network.rs  sync.rs  test.rs  update.rs
src/templates/: counter.rs  marketplace.rs  mod.rs  simple_counter.rs
