[package]
name = "starpin"
version = "0.1.0"
readme = "README.md"
edition = "2021"
authors = ["Zeesh - contact me on Zeeshdev28@gmail.com"]
description = "CLI tool for creating and managing Star Frame Solana programs"
license = "MIT"

[[bin]]
name = "starpin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
handlebars = "6.3.2"
uuid = { version = "1.0", features = ["v4"] }
fs_extra = "1.3"
solana-sdk = "3.0.0"
bs58 = "0.5"
reqwest = { version = "0.12.23", features = ["json"] }
semver = "1.0"
